Bug 1208217 - Enable paste event listener in documents with no editor component, r=enndeakin